--- a/livecdfs/livecdfs.spec.in
+++ b/livecdfs/livecdfs.spec.in
@@ -1,4 +1,4 @@
-# $Id: livecdfs.spec.in,v 1.4 2004/01/24 20:49:21 jaco Exp $
+# $Id: livecdfs.spec.in,v 1.5 2004/01/24 20:50:50 jaco Exp $
 
 %define name	livecdfs
 %define version	@LIVECDFSVER@
@@ -32,7 +32,7 @@ to mimic writing to a non-writable medium.
 EXTRA_CFLAGS="-O2 -g" 
 EXTRA_CXXFLAGS="-O2 -g"
 %if %{build_debug}
-	EXTRA_CXXFLAGS="$EXTRA_CXXFLAGS -O2 -g -DDEBUG"
+	EXTRA_CXXFLAGS="$EXTRA_CXXFLAGS -DDEBUG"
 %endif
 %make EXTRA_CFLAGS="$EXTRA_CFLAGS" EXTRA_CXXFLAGS="$EXTRA_CXXFLAGS"
 
