--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.110 2004/01/24 15:58:10 jaco Exp $
+# $Id: hwdetect.in,v 1.111 2004/01/25 08:57:02 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -220,7 +220,7 @@ sub hwdetect_init {
 		$name => $value || 1;
 	} split(/ /, cat_('/proc/cmdline'));
 
-	# initialis our languages
+	# initialise our languages
 	%strings = getStrings();
 	%languages = getLanguages();
 	$lang = getMyLang();
