--- a/livecd-utils/src/livecd-install-lang.pm.in
+++ b/livecd-utils/src/livecd-install-lang.pm.in
@@ -19,7 +19,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install-lang.pm.in,v 1.4 2004/01/25 10:36:18 jaco Exp $
+# $Id: livecd-install-lang.pm.in,v 1.5 2004/01/25 10:49:59 jaco Exp $
 #
 
 package fMain;
@@ -56,6 +56,8 @@ my %strings = (
 	'btn_yes'          => [ "&Yes", undef ],
 	'btn_no'           => [ "&No", undef ],
 	'btn_inst'         => [ "&Install", undef ],
+	
+	'yes'              => [ "Yes", undef ],
 
 	'time_elapsed'     => [ "Elapsed", undef ],
 	'time_remaining'   => [ "Remaining", undef ],
@@ -94,6 +96,7 @@ my %strings = (
 	'boot_bs'          => [ "(Bootsector of partition)", undef ],
 	'boot_mbr'         => [ "(Master boot record of drive)", undef ],
 	
+	'fstab_info'       => [ "Entries below this line were automatically added by LiveCD install", undef ],
 
 	'scr_1_title'      => [ "Step 1 of 6: Welcome", undef ],
 	'scr_1_text'       => [ "<p><b>Welcome</b> to the LiveCD installation program. This application will guide you through the steps of installing the LiveCD to your local disk.</p>\n<p>Navigation through the steps can be done with the <i>Back</i> and <i>Next</i> buttons, while you can exit/abort the process at any time with the <i>Cancel</i> button.</p>\n<p>This is BETA quality software and might have adverse (unintended) side effects on your current running system. These side-effects might include erasing of important data and/or rendering of your system in an unbootable state. Use it with care!</p><p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</p>\n", undef ],
