--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.117 2004/01/26 08:47:20 jaco Exp $
+# $Id: hwdetect.in,v 1.118 2004/01/26 14:06:11 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -344,7 +344,7 @@ sub hwdetect_loadmod {
 	my ($module, $vendor, $desc, $delay) = @_;
 	my $done = 0;
 	print_device($module, $vendor, $desc);
-	unless ($module =~ /unknown/) {
+	unless ($module =~ /unknown/ || $module =~ /\:/) {
 		$delay = undef if (defined($delay) && is_loaded($module));
 		my $num = modprobe("", $module);
 		sleep($delay) if (defined($delay) && $delay);
