--- a/mklivecd/src/rc.sysinit.in
+++ b/mklivecd/src/rc.sysinit.in
@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.46 2005/02/14 06:56:35 tom_kelly33 Exp $
+# $Id: rc.sysinit.in,v 1.47 2005/02/23 03:04:08 tom_kelly33 Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
@@ -217,7 +217,7 @@ setupdir_etc() {
 		echo '/dev/rd/3 /        tmpfs  defaults  0 0' >>/etc/fstab
 	fi
 
-	rm -rf /etc/mtab && ln -s /proc/mounts /etc/mtab
+	rm -f /etc/mtab && touch /mnt/mtab
 	rm -rf /etc/modules.conf && touch /etc/modules.conf
 	rm -rf /etc/rc.d/rc3.d/S05harddrake
 	rm -rf /etc/rc.d/rc5.d/S05harddrake
