--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -22,7 +22,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.140 2005/02/14 06:56:35 tom_kelly33 Exp $
+# $Id: mklivecd.in,v 1.141 2005/02/25 16:57:18 tom_kelly33 Exp $
 #
 
 use strict;
@@ -1017,6 +1017,7 @@ MAIN: {
 #		keyboard::write(keyboard::lang2keyboard($o_keyboard));
 #	}
 
+	do_cmd("rm -f $o_root/usr/X11R6/lib/X11/xkb/compiled");
 	do_cmd("ln -sf $o_root/var/lib/xkb $o_root/usr/X11R6/lib/X11/xkb/compiled");
 	do_cmd("ln -sf $o_root/var/lib/xdm $o_root/usr/X11R6/lib/X11/xdm/authdir");
 
