--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -22,7 +22,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.142 2005/02/26 16:31:28 tom_kelly33 Exp $
+# $Id: mklivecd.in,v 1.143 2005/03/03 16:34:27 tom_kelly33 Exp $
 #
 
 use strict;
@@ -580,7 +580,7 @@ sub check_root {
 ### see if we are indeed root
 sub check_apps {
 	die_("\nFATAL: The '/usr/bin/mkisofs' program is not available, please install the correct package\n") unless (-f '/usr/bin/mkisofs');
-	die("\nFATAL: The '$loopcmp' program not is available, please install the correct package\n") unless (!defined($loopcmp) || -f $loopcmp);
+	die("\nFATAL: The '$loopcmp' program is not available, please install the correct package\n") unless (!defined($loopcmp) || -f $loopcmp);
 }
 
 
