--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -23,7 +23,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.161 2005/09/25 06:11:11 ikerekes Exp $
+# $Id: hwdetect.in,v 1.162 2005/09/26 03:36:29 ikerekes Exp $
 #
 
 use strict;
@@ -33,10 +33,14 @@ use Getopt::Long;
 #use standalone;
 $ENV{SHARE_PATH} ||= "/usr/share";
 
+use c;
 use common;
 use do_pkgs;
 use fsedit;
 use fs;
+use detect_devices;
+use harddrake::data;
+use harddrake::autoconf;
 use harddrake::sound;
 use keyboard;
 use modules;
@@ -53,6 +57,12 @@ use Xconfig::xfree;
 
 use MDK::Common::File;
 use MDK::Common::System;
+
+#use lib qw(/usr/lib/libDrakX);
+#use standalone;
+#use common;
+#use modules;
+use Storable qw(store retrieve);
 
 ### global constants
 my $SCRIPT_NAME    = "hwdetect";
@@ -98,6 +108,9 @@ my $numusb	  = 0;
 my $numwin	  = 'c';
 my $old_X;
 my $usbfstab	  = 0;
+my $modules_conf = modules::any_conf->read;
+my %cmdline;
+my $DEF_KEYBOARD   = "us";
 
 ### progress stuff
 my $progress_now  = @VAL_SPLASH_LINUXRC@+@VAL_SPLASH_SYSINIT@;
@@ -226,7 +239,7 @@ sub print_device {
 sub set_progress() {
 	if ($progress_on &&
 	    -e '/proc/splash'  &&
-	    $cmdline{splash} =~ /silent/) {
+	    $cmdline{splash} =~ /yes/) {
 		my $pos = ($progress_max*(++$progress_now+1))/$progress_full;
 		system("echo 'show $pos' >/proc/splash");
 	}
@@ -454,7 +467,7 @@ sub hwdetect_probepci() {
 					foreach my $opt (cat_("/etc/sysconfig/pcmcia")) {
 						chomp($opt);
 						my ($name, $value) = split(/=/, $opt);
-						$popts{$name} = $value || 1;
+						$popts{$name} = $value;
 					}
 					$popts{PCMCIA} = "yes";
 					$popts{PCIC} = $pci->{driver};
@@ -560,8 +573,8 @@ sub hwdetect_getsata() {
 		return
 	}
 	my @satalist = qw(libata ata_piix sg sata_sis
-        ahci ata_adma pata_pdc2027x sata_qstor sata_sil24 sata_sis sata_sx4 sata_uli sx8
-		sata_nv sata_promise sata_sil sata_svw sata_via sata_vsc);
+	ahci ata_adma pata_pdc2027x sata_qstor sata_sil24 sata_sis sata_sx4 sata_uli sx8
+	sata_nv sata_promise sata_sil sata_svw sata_via sata_vsc);
 
 #        my @satalist = qw(libata sd_mod ata_piix scsi_mod sr_mod sg a100u2w
 #                advansys aha152x aha1542 aic7xxx BusLogic fdomain gdth
@@ -1381,6 +1394,13 @@ EOF
 sub version () {
 	print "$SCRIPT_NAME $SCRIPT_VER\n";
 }
+sub enable_service {
+    run_program::run('/sbin/chkconfig', '--level', 5, $_[0], 'on');
+}
+    
+sub disable_service {
+    run_program::run('/sbin/chkconfig', '--del', $_[0], 'on');
+}
 
 MAIN: { print "\n$COLOR_YELLOW"."HWDETECT - MAIN ---------------$COLOR_NORMAL\n";
 	GetOptions(
@@ -1394,7 +1414,7 @@ MAIN: { print "\n$COLOR_YELLOW"."HWDETECT - MAIN ---------------$COLOR_NORMAL\n"
 
 	# initialise
 	hwdetect_init();
-	hwdetect_readconf();
+#	hwdetect_readconf();
 	
 	# probe buses
 	unless (defined($fdisk)) {
@@ -1403,28 +1423,85 @@ MAIN: { print "\n$COLOR_YELLOW"."HWDETECT - MAIN ---------------$COLOR_NORMAL\n"
 		hwdetect_initpcmcia();
 	}
 	
-	# get all devices
-	unless (defined($fdisk)) {
-		print "\n$COLOR_YELLOW"."HWDETECT: Starting probeall $COLOR_NORMAL\n";
-		hwdetect_probeall();
-		hwdetect_printall();
-		print "\n$COLOR_YELLOW"."HWDETECT: Starting getsata $COLOR_NORMAL\n";
-		hwdetect_getsata();
-		print "\n$COLOR_YELLOW"."HWDETECT: Starting getxfree $COLOR_NORMAL\n";
-		hwdetect_getxfree();
-		print "\n$COLOR_YELLOW"."HWDETECT: Starting getsound $COLOR_NORMAL\n";
-		hwdetect_getsound();
-		print "\n$COLOR_YELLOW"."HWDETECT: Starting getnetwork $COLOR_NORMAL\n";
-		hwdetect_getnetwork();
-
-		#hwdetect_getprinters();
-		print "\n$COLOR_YELLOW"."HWDETECT: Starting getusb $COLOR_NORMAL\n";
-		hwdetect_getusb();
-
-		#hwdetect_getserial();
-		hwdetect_writeconf();
+	# Configure USB_CONTROLLERS - writes to /etc/modprobe.conf
+	
+	if (!defined($cmdline{nousb})) {
+	modules::load_category($modules_conf, 'bus/usb');
+	$modules_conf->write;
 	}
 	
+	
+	# Configure PCMCIA_CONTROLLER - writes to etc/sysconfig/pcmcia
+#	if ($cmdline !~ "nopcmcia") {
+#	harddrake::autoconf::pcmcia(keys %ID ? first(values(%ID))->{driver} : '');
+#	$modules_conf->write;
+#	}
+#	else {
+#	    disable_service('pcmcia');
+#	    }
+#	    
+	    
+	    # Configure AUDIO - writes to /etc/modprobe.conf
+	    # automatic sound slots configuration
+	    
+	if (!defined($cmdline{nosound})) {
+	rm_rf("/etc/asound.state") if -e "/etc/asound.state";
+	harddrake::sound::configure_sound_slots($modules_conf);
+	$modules_conf->write;
+	}
+	else {
+	    disable_service('sound');
+	}
+		
+	#Configure ETHERNET - writes to /etc/modprobe.conf
+		
+	if (!defined($cmdline{nonetwork})) {
+	    $modules_conf->remove_alias_regexp('^(wlan|eth)[0-9]*$');
+	    modules::load_category($modules_conf, 'network/main|gigabit|usb|wireless|firewire|pcmcia');
+	    require network::ethernet;
+	    network::ethernet::update_iftab();
+	    network::ethernet::configure_eth_aliases($modules_conf);
+	    $modules_conf->set_alias('net-pf-10', 'off');
+	    $modules_conf->write;
+	}
+	else {
+	    disable_service('network');
+	}
+		    
+	#Configure VIDEO - writes to /etc/X11/xorg.conf & /etc/modprobe.preload for agp drivers
+	if (!defined($cmdline{xres}) && !defined($cmdline{xbpp}) && !defined($cmdline{xdrv})) {
+		    harddrake::autoconf::xconf($modules_conf, {});
+	    $modules_conf->write;
+	}
+	# If user specifies xres,xbpp or xdrv then use routine from original hwdetect below
+	else {
+	    hwdetect_getxfree();
+	}
+	
+	#Configure MOUSE - writes to /etc/sysconfig/mouse
+	
+	harddrake::autoconf::mouse_conf($modules_conf);
+	$modules_conf->write;
+	
+	#Configure KEYBOARD routine goes here if $cmdline keyb
+	if (defined($cmdline{keyb})) {
+	    my $probed_keyb = { KEYBOARD => $cmdline{keyb} };
+	    my $probed_desc = keyboard::keyboard2text($probed_keyb);
+	    unless (defined($probed_desc)) {
+		$probed_keyb = { KEYBOARD => $DEF_KEYBOARD };
+		$probed_desc = keyboard::keyboard2text($probed_keyb);
+	    }
+	}
+						    
+#	# CONFIGURE TIMEZONE? - writes to etc/sysconfig/clock
+#	require timezone;
+#	timezone::write($o->{timezone});
+						    
+	# Turn on  numlock if computer isnt laptop?
+	detect_devices::isLaptop() or enable_service('numlock');
+						    
+						    
+	# CONFIGURE FSTAB here only for hard drive partitions and such Dont put in floppy or cdrom entries	
 	# get disks
 	print "\n$COLOR_YELLOW"."HWDETECT: Starting getdisks\n$COLOR_NORMAL";
 	hwdetect_getdisks();
