--- a/mklivecd/src/rc.sysinit.in
+++ b/mklivecd/src/rc.sysinit.in
@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.51 2005/09/25 06:11:12 ikerekes Exp $
+# $Id: rc.sysinit.in,v 1.52 2005/09/27 05:16:04 ikerekes Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
@@ -464,8 +464,8 @@ setupinit() {
 		"umount /sys"
 
 	# clean up /proc (init mounts it via rc.sysinit)
-	docmd   "  Unmounting /proc filesystem" \
-		"umount /proc"
+	#docmd   "  Unmounting /proc filesystem" \
+	#	"umount /proc"
 
 	# display some info
 	distro=`/bin/cat /etc/redhat-release | awk '{ print $1 }'`
